--- a/configure.ac
+++ b/configure.ac
@@ -431,6 +431,8 @@ AC_MSG_CHECKING(whether password file entry for the vpopmail user exists)
 AC_RUN_IFELSE([AC_LANG_SOURCE([[
   #include <unistd.h>
   #include <string.h>
+  #include <unistd.h>
+  #include <string.h>
   #include <stdio.h>
   #include <pwd.h>
   #include <stdlib.h>
