Changelog update, password_strength.conf update

--- a/password_strength.conf
+++ b/password_strength.conf
@@ -26,10 +26,12 @@
 #
 
 #
-# Require passwords of at least 6 characters
+# Require passwords of at least x characters
 #
+# We can initially relax this feature if we have configured cracklib on qmailadmin side
+# and if we have a pwd strength check in place in the webmail as well.
 
-Policy = Passwords must be at least six characters long
+Policy = Passwords must be at least one character long
 Length >= 1
 
 #
