--- a/Makefile.in
+++ b/Makefile.in
@@ -1436,7 +1436,7 @@ install-data-local:
 	$(INSTALL) -o root -m 0444 \
 	  config.h $(DESTDIR)@vpopmaildir@/include/vpopmail_config.h
 
-	for include in vpopmail.h config.h vauth.h vlimits.h storage.h client.h conf.h ippp.h vlogger.h; do \
+	for include in vpopmail.h config.h vauth.h vlimits.h storage.h client.h conf.h ippp.h vlogger.h pwstr.h; do \
 	    $(INSTALL) -o root -m 0444 $$include \
 		$(DESTDIR)@vpopmaildir@/include/ ; \
 	done
