dropped the 'MySQL limits' warning at the end of the configure

--- a/Makefile.in
+++ b/Makefile.in
@@ -340,9 +340,9 @@ ETAGS = etags
 CTAGS = ctags
 CSCOPE = cscope
 DIST_SUBDIRS = cdb
-am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	ChangeLog compile config.guess config.sub install-sh ltmain.sh \
-	missing mkinstalldirs
+am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in compile \
+	config.guess config.sub install-sh ltmain.sh missing \
+	mkinstalldirs
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 distdir = $(PACKAGE)-$(VERSION)
 top_distdir = $(distdir)
