minor updates in Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -152,7 +152,10 @@ vusage-msg:
 	@echo "     If you plan to use the vpopmail usage daemon"
 	@echo "     run the following commands:"
 	@echo ""
-	@echo "   cd vusaged && ./configure && make"
+	@echo "   cd vusaged"
+	@echo "   LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include/libev \\"
+	@echo "   LIBS=\`head -1 $(vpopmaildir)/etc/lib_deps\` \\"
+	@echo "   ./configure --with-vpopmail=$(vpopmaildir)/ && make"
 	@echo ""
 	@echo "     Then follow the INSTALL file to install"
 	@echo ""
