--- a/configure.ac
+++ b/configure.ac
@@ -2,11 +2,14 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.71])
 AC_INIT([vpopmail],[5.6.12])
+AM_INIT_AUTOMAKE([foreign subdir-objects])
+AM_MAINTAINER_MODE([disable])
+AC_USE_SYSTEM_EXTENSIONS
+
 PACKAGE=$PACKAGE_NAME
 VERSION=$PACKAGE_VERSION
 
 AC_CONFIG_HEADERS([config.h])
-AM_INIT_AUTOMAKE()
 
 AC_CANONICAL_HOST
 
